# HyperGraphRAG

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ragas_evaluation_results.csv  requirements.txt
docs/: README.md
examples/: README.md  basic_insert.py  basic_query.py  basic_usage.py  evaluate_ragas_hotpotqa.py  stream_insert.py
examples/advanced/: ragas_evaluation.py
examples/basics/: 01_add_documents.py  02_query_documents.py  03_e2e_demo.py  04_stream_add.py  05_batch_management.py
examples/ragas/: 01_prepare_data.py  02_evaluate.py
examples/utils/: check_health.py
hypergraphrag/: __init__.py  client.py  embedding.py  llm_extractor.py  logger.py  models.py  neo4j_manager.py  prompts.py  text_processor.py
tests/: __init__.py  conftest.py  test_models.py  verify_refactor.py
